# FaultHunter

./: .gitignore  README.md  package.json  pyproject.toml  pytest.ini
.github/workflows/: daily-faulthunter-report.yml
browser/: probe.mjs
faulthunter/: case_bank.py  cli.py  config.py  main.py  models.py  spec_catalog.py  utils.py
faulthunter/evaluation/: capture.py  diagnostics.py  runner.py
faulthunter/reports/: __init__.py  markdown.py  writer.py
faulthunter/targets/: __init__.py  tradetalk.py
faulthunter/verifiers/: __init__.py  browser.py  research.py
reports/: latest.md
reports/daily/2026/: 2026-04-04.md
reports/manual/2026/: 2026-04-04T024959Z.md  2026-04-04T025356Z.md
specs/: FEATURE_TEST_SPEC.md
tests/: test_diagnostics.py  test_markdown.py  test_research.py  test_runner.py  test_spec_catalog.py  test_writer.py
