[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faulthunter"
version = "0.1.0"
description = "Adversarial evaluator for TradeTalk market intelligence surfaces."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110,<1.0",
  "httpx>=0.27,<0.28",
  "pydantic>=2.6,<3.0",
  "uvicorn>=0.29,<1.0",
  "yfinance>=0.2.54",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[tool.setuptools.packages.find]
include = ["faulthunter*"]
